added bootstrap containers

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 
 </head>
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+    
+    
 <h1>This is my title</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, dolor, iste. Harum temporibus tempora qui dolores ratione at sequi, fugit autem esse, voluptatum saepe labore laboriosam blanditiis consequatur officia facere?</p>
+
+
+        </div>
+    </div>
+</div>
 </body>
-</html>
+</html> 
