--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,15 @@
 <<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link rel="stylesheet" href="css/main.css" type="text/css" />
-<div class="topnav">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="topnav">
   <a class="active" href="#home">Home</a>
   <a href="#story">Story</a>
   <a href="#contact">Contact</a>
+</div>
+</div>
+</div>
 </div>
 </head>
