--- a/about.html
+++ b/about.html
@@ -7,15 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link rel="stylesheet" href="css/main.css" type="text/css" />
-<title>Home</title>
+<title>About</title>
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                 <a href="index.html">Home</a>
+                <a href="index.html">Home</a>
                   <a href="about.html">About</a>
-    
     
 <h1>This is my title</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, dolor, iste. Harum temporibus tempora qui dolores ratione at sequi, fugit autem esse, voluptatum saepe labore laboriosam blanditiis consequatur officia facere?</p>
