--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
                 <a href="index.html">Home</a>
                   <a href="about.html">About</a>
     
-<h1>This is my title</h1>
+<h1>About Us </h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, dolor, iste. Harum temporibus tempora qui dolores ratione at sequi, fugit autem esse, voluptatum saepe labore laboriosam blanditiis consequatur officia facere?</p>
 
 
