--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <div class="col-sm-12">
                  <a href="index.html">Home</a>
                   <a href="about.html">About</a>
+                  <a href="contact.html">Contact</a>
+                  <a href="story.html"></a>
     
     
 <h1>This is the Home Page</h1>
