--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
                  <a href="index.html">Home</a>
                   <a href="about.html">About</a>
                   <a href="contact.html">Contact</a>
-                  <a href="story.html"></a>
+                  <a href="story.html">Story</a>
     
     
 <h1>Contact Us</h1>
